--- a/grid/css/styles.css
+++ b/grid/css/styles.css
@@ -7,3 +7,36 @@
 .table td{
     border: 1px solid #000 !important;
 }
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 100;
+    background-color: #000;
+    opacity: 0.5;
+}
+
+.modal{
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    z-index: 101;
+    background-color: #fff;
+    left: calc(50% - 150px);
+    padding: 10px;
+    border-radius: 5px;
+
+}
+.close-btn{
+    float: right;
+}
+
+.action-btns{
+    position: absolute;
+    float: right;
+    bottom: 10px;
+    right: 10px;
+}
